monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  namespace: monitoring

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - grafana.devopswithsachin.in
      secretName: grafana-tls

  rules:
    - host: grafana.devopswithsachin.in

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
